# room_reservation

./: .env  .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 459b242b3cb1_add_user_id_to_reservation.py  812d4a4bfd1c_first_migration.py  9456c545230d_add_reservation_model.py  aef4ddc2cd65_add_description_to_meetingroom.py  d6f6da62e1fc_add_user_model.py
app/: main.py
app/api/: meeting_room.py  reservation.py  routers.py  validators.py
app/api/endpoints/: __init__.py  google_api.py  meeting_room.py  reservation.py  user.py
app/core/: base.py  config.py  db.py  google_client.py  init_db.py  user.py
app/crud/: base.py  meeting_room.py  reservation.py
app/models/: __init__.py  meeting_room.py  reservation.py  user.py
app/schemas/: meeting_room.py  reservation.py  user.py
app/services/: google_api.py
